# WebBrowser

./: .gitignore  README.md  debugger.glade
.github/workflows/: codeql-analysis.yml
CSSParser/: CMakeLists.txt  cssparse.cpp  cssparse.h  main.cpp
GUI/: CMakeLists.txt  freetypeeasy.cpp  freetypeeasy.h  main.cpp  x11window.cpp  x11window.h
HTMLRenderer/: CMakeLists.txt  css.cpp  css.h  cssparse.cpp  cssparse.h  debugger.cpp  debugger.h  freetypeeasy.cpp  freetypeeasy.h  htmlrenderer.cpp  htmlrenderer.h  main.cpp  old.cpp  prepare-debug.sh  prepare.sh  renderdom.cpp  renderdom.h  webservice.cpp  webservice.h  x11window.cpp  x11window.h
HTMLRenderer/data/: default.css
